// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`for loop variable cannot be reassigned in closure: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "for (let i = 0; i < 10; i = i + 1) {
  function f() {
    i = 10;
  }
}",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 3: Assignment to a for loop variable in the for loop is not allowed.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`for loop variable cannot be reassigned: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "for (let i = 0; i < 10; i = i + 1) {
  i = 10;
}",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 2: Assignment to a for loop variable in the for loop is not allowed.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`testing typability 1`] = `
Node {
  "body": Array [
    Node {
      "declarations": Array [
        Node {
          "end": 11,
          "id": Node {
            "end": 7,
            "loc": SourceLocation {
              "end": Position {
                "column": 7,
                "line": 1,
              },
              "start": Position {
                "column": 6,
                "line": 1,
              },
            },
            "name": "a",
            "start": 6,
            "type": "Identifier",
          },
          "init": Node {
            "end": 11,
            "loc": SourceLocation {
              "end": Position {
                "column": 11,
                "line": 1,
              },
              "start": Position {
                "column": 10,
                "line": 1,
              },
            },
            "raw": "1",
            "start": 10,
            "type": "Literal",
            "value": 1,
          },
          "loc": SourceLocation {
            "end": Position {
              "column": 11,
              "line": 1,
            },
            "start": Position {
              "column": 6,
              "line": 1,
            },
          },
          "start": 6,
          "type": "VariableDeclarator",
        },
      ],
      "end": 12,
      "kind": "const",
      "loc": SourceLocation {
        "end": Position {
          "column": 12,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "start": 0,
      "typability": "NotYetTyped",
      "type": "VariableDeclaration",
    },
    Node {
      "body": Node {
        "body": Array [
          Node {
            "end": 54,
            "expression": Node {
              "end": 53,
              "loc": SourceLocation {
                "end": Position {
                  "column": 3,
                  "line": 3,
                },
                "start": Position {
                  "column": 2,
                  "line": 3,
                },
              },
              "name": "c",
              "start": 52,
              "type": "Identifier",
            },
            "loc": SourceLocation {
              "end": Position {
                "column": 4,
                "line": 3,
              },
              "start": Position {
                "column": 2,
                "line": 3,
              },
            },
            "start": 52,
            "type": "ExpressionStatement",
          },
          Node {
            "argument": Node {
              "arguments": Array [],
              "callee": Node {
                "end": 65,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 10,
                    "line": 4,
                  },
                  "start": Position {
                    "column": 9,
                    "line": 4,
                  },
                },
                "name": "f",
                "start": 64,
                "type": "Identifier",
              },
              "end": 67,
              "loc": SourceLocation {
                "end": Position {
                  "column": 12,
                  "line": 4,
                },
                "start": Position {
                  "column": 9,
                  "line": 4,
                },
              },
              "start": 64,
              "type": "CallExpression",
            },
            "end": 68,
            "loc": SourceLocation {
              "end": Position {
                "column": 13,
                "line": 4,
              },
              "start": Position {
                "column": 2,
                "line": 4,
              },
            },
            "start": 57,
            "type": "ReturnStatement",
          },
        ],
        "end": 70,
        "loc": SourceLocation {
          "end": Position {
            "column": 1,
            "line": 5,
          },
          "start": Position {
            "column": 13,
            "line": 2,
          },
        },
        "start": 37,
        "type": "BlockStatement",
      },
      "end": 70,
      "expression": false,
      "generator": false,
      "id": Node {
        "end": 34,
        "loc": SourceLocation {
          "end": Position {
            "column": 10,
            "line": 2,
          },
          "start": Position {
            "column": 9,
            "line": 2,
          },
        },
        "name": "f",
        "start": 33,
        "type": "Identifier",
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "line": 5,
        },
        "start": Position {
          "column": 0,
          "line": 2,
        },
      },
      "params": Array [],
      "start": 24,
      "typability": "NotYetTyped",
      "type": "FunctionDeclaration",
    },
    Node {
      "declarations": Array [
        Node {
          "end": 84,
          "id": Node {
            "end": 78,
            "loc": SourceLocation {
              "end": Position {
                "column": 7,
                "line": 6,
              },
              "start": Position {
                "column": 6,
                "line": 6,
              },
            },
            "name": "b",
            "start": 77,
            "type": "Identifier",
          },
          "init": Node {
            "arguments": Array [],
            "callee": Node {
              "end": 82,
              "loc": SourceLocation {
                "end": Position {
                  "column": 11,
                  "line": 6,
                },
                "start": Position {
                  "column": 10,
                  "line": 6,
                },
              },
              "name": "f",
              "start": 81,
              "type": "Identifier",
            },
            "end": 84,
            "loc": SourceLocation {
              "end": Position {
                "column": 13,
                "line": 6,
              },
              "start": Position {
                "column": 10,
                "line": 6,
              },
            },
            "start": 81,
            "type": "CallExpression",
          },
          "loc": SourceLocation {
            "end": Position {
              "column": 13,
              "line": 6,
            },
            "start": Position {
              "column": 6,
              "line": 6,
            },
          },
          "start": 77,
          "type": "VariableDeclarator",
        },
      ],
      "end": 85,
      "kind": "const",
      "loc": SourceLocation {
        "end": Position {
          "column": 14,
          "line": 6,
        },
        "start": Position {
          "column": 0,
          "line": 6,
        },
      },
      "start": 71,
      "typability": "NotYetTyped",
      "type": "VariableDeclaration",
    },
    Node {
      "body": Node {
        "body": Array [],
        "end": 128,
        "loc": SourceLocation {
          "end": Position {
            "column": 1,
            "line": 8,
          },
          "start": Position {
            "column": 13,
            "line": 7,
          },
        },
        "start": 110,
        "type": "BlockStatement",
      },
      "end": 128,
      "expression": false,
      "generator": false,
      "id": Node {
        "end": 107,
        "loc": SourceLocation {
          "end": Position {
            "column": 10,
            "line": 7,
          },
          "start": Position {
            "column": 9,
            "line": 7,
          },
        },
        "name": "g",
        "start": 106,
        "type": "Identifier",
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "line": 8,
        },
        "start": Position {
          "column": 0,
          "line": 7,
        },
      },
      "params": Array [],
      "start": 97,
      "typability": "Untypable",
      "type": "FunctionDeclaration",
    },
    Node {
      "declarations": Array [
        Node {
          "end": 140,
          "id": Node {
            "end": 136,
            "loc": SourceLocation {
              "end": Position {
                "column": 7,
                "line": 9,
              },
              "start": Position {
                "column": 6,
                "line": 9,
              },
            },
            "name": "c",
            "start": 135,
            "type": "Identifier",
          },
          "init": Node {
            "end": 140,
            "loc": SourceLocation {
              "end": Position {
                "column": 11,
                "line": 9,
              },
              "start": Position {
                "column": 10,
                "line": 9,
              },
            },
            "raw": "1",
            "start": 139,
            "type": "Literal",
            "value": 1,
          },
          "loc": SourceLocation {
            "end": Position {
              "column": 11,
              "line": 9,
            },
            "start": Position {
              "column": 6,
              "line": 9,
            },
          },
          "start": 135,
          "type": "VariableDeclarator",
        },
      ],
      "end": 141,
      "kind": "const",
      "loc": SourceLocation {
        "end": Position {
          "column": 12,
          "line": 9,
        },
        "start": Position {
          "column": 0,
          "line": 9,
        },
      },
      "start": 129,
      "typability": "Untypable",
      "type": "VariableDeclaration",
    },
  ],
  "end": 156,
  "loc": SourceLocation {
    "end": Position {
      "column": 27,
      "line": 9,
    },
    "start": Position {
      "column": 0,
      "line": 1,
    },
  },
  "sourceType": "module",
  "start": 0,
  "type": "Program",
}
`;
